Created Action icons for delete and update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,7 +50,7 @@
     {{ post.data.address }}
     </td>
     <td>
-        <a href="#" (click)="deletePost(post.id)">delete</a>
+        <a href="#" (click)="deletePost(post.id)">❌</a>&nbsp;&nbsp;<a href="#" (click)="updatePost(post.id)">✔️</a>
     </td>
     </tr>
     </table>
