--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 </p>
 <input type="submit" value="Add a posts" (click)="addPost()">
 
-<h1>List of Users</h1>
+<h1>List of Contacts</h1>
 <table>
     <tr>
         <td>
